tests/snapshots/files__fail_wrong_assertion.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  i64-17615343019692007359:
    op: "3"
    children: []
    eclass: i64-17615343019692007359
    cost: 0
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  g-7659469028595837896:
    op: g
    children:
      - i64-5871781006564002453
      - i64-11743562013128004906
    eclass: i64-17615343019692007359
    cost: 1
  g-1081172882011038115:
    op: g
    children:
      - i64-11743562013128004906
      - i64-17615343019692007359
    eclass: i64-17615343019692007359
    cost: 1
root_eclasses: []
class_data:
  i64-17615343019692007359:
    type: i64
  i64-5871781006564002453:
    type: i64
  i64-11743562013128004906:
    type: i64

