tests/snapshots/files__fail_wrong_assertion_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises (Fiat (= (f 1 4) (f 1 4))) (Fiat (= 4 4)))
  (substitution (@n 4)))(let t0 (g 1 2 3))
(let t1 (g 2 3 3))
(Rule
  (= (@ExistsConstructor3) (@ExistsConstructor3))
  (name "@prove_exists_rule3")
  (premises (Fiat (= t0 t0)) (Fiat (= t1 t1)) (Fiat (= 3 3)))
  (substitution (@n3 3) (@n4 3)))(let t0 (g 1 2 3))
(Rule
  (= (@ExistsConstructor6) (@ExistsConstructor6))
  (name "@prove_exists_rule6")
  (premises (Fiat (= t0 t0)) (Fiat (= 3 3)))
  (substitution (x 3) (@n7 3)))(let t0 (g 1 2 3))
(let prf0 (Fiat (= 3 3)))
(let t1 (g 2 3 3))
(Rule
  (= (@ExistsConstructor8) (@ExistsConstructor8))
  (name "@prove_exists_rule8")
  (premises (Fiat (= t0 t0)) prf0 (Fiat (= t1 t1)) prf0 prf0)
  (substitution (@n9 3) (y 3) (@n10 3) (x 3)))
