tests/snapshots/files__fibonacci_demand_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Num 13)
Add: 6
Add: 6
Fib: 8
Fib: 8
Num: 7
Num: 7
